put background on tables, fixed spacing for boxed class

--- a/public_html/css_test2.css
+++ b/public_html/css_test2.css
@@ -8,4 +8,5 @@ p{
 	background-color:#D5D5D3;
 	border: 3px solid black;
 	padding:10px 15px 10px 15px;
+	margin: 25px 10px 5px 10px;
 }
